--- a/src/HashMapVisualizer/HashMapVisualizer.css
+++ b/src/HashMapVisualizer/HashMapVisualizer.css
@@ -17,12 +17,12 @@
 .button_panel {
   margin-top: 3vw;
   padding: 0vw;
+  position: relative;
 }
 
 .button {
   background-color: rgb(59, 130, 187);
   border-radius: 0.5vw;
-  border: 0.25vw double #99CC66;
   color: #eeeeee;
   text-align: center;
   font-size: 1.15vw;
@@ -103,11 +103,20 @@
 
 .switch_box_panel {
   border-radius: 0.5vw;
-  border: 0.3vw double #dddddd;
+  background-color: #B4D890;
   padding: 0.81vw;
   position: absolute;
   text-align: center;
-  line-height: 0;
-  right: 1vw;
-  top: 1vw;
+  line-height: 1.8vw;
+  text-decoration: underline;
+  left: 1.5vw;
+  top: 1.5vw;
+  width: 10vw;
+  margin: 0vw;
+}
+
+.button_switch_pos {
+  position: relative;
+  left: -2vw;
+  margin: 0vw;
 }
