Making css relative for different screen sizes

--- a/src/HashMapVisualizer/HashMapVisualizer.css
+++ b/src/HashMapVisualizer/HashMapVisualizer.css
@@ -109,6 +109,7 @@
   text-align: center;
   line-height: 1.8vw;
   text-decoration: underline;
+  font-size: 1.3vw;
   left: 1.5vw;
   top: 1.5vw;
   width: 10vw;
