--- a/src/HashMapVisualizer/Entry/Entry.css
+++ b/src/HashMapVisualizer/Entry/Entry.css
@@ -1,7 +1,7 @@
 .entry {
   width:4.5vw;
   height: 4vw;
-  padding: 0.6vw;
+  padding: 0.8vw;
   margin: 0.05vw;
   line-height: 0;
   outline: 0.18vw solid rgb(59, 130, 187);
@@ -12,4 +12,8 @@
   text-align: left;
   font-size: 0.9vw;
   background-color: white;
+}
+
+.entryText {
+  margin-bottom: 1vw;
 }
